[project]
name = "quartfeed-app"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0",
    "quart>=0.20",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.18",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "quart-wtforms>=1.0.3",
    "passlib>=1.7.4",
    "wand>=0.7.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
